@@ -2,8 +2,6 @@ apply plugin: "java"
 
 version '1.0'
 
-sourceCompatibility = 1.8
-
 sourceSets.main.java.srcDirs = ["src"]
 
 repositories{
@@ -27,9 +25,13 @@ ext{
 //java 8 backwards compatibility flag
 allprojects{
     tasks.withType(JavaCompile){
-        if(JavaVersion.current() != JavaVersion.VERSION_1_8){
+        if(JavaVersion.current() != JavaVersion.VERSION_1_4){
             options.compilerArgs.addAll(['--release', '8'])
         }
+
+//        doFirst {
+//            options.compilerArgs.addAll(['--release', '14', "--enable-preview"])
+//        }
     }
 }
 
